auto-test/tests/chapter_16/valid/extra_credit/promote_switch_cond.c




int main(void) {
    char c = 100;
    switch (c) {
        case 0:
            return 1;
        case 100:
            return 0;
        
        case 356:
            return 2;
        default:
            return 3;
    }
}