auto-test/tests/chapter_16/invalid_parse/invalid_type_specifier.c
int main(void)
{
    
    
    int char x = 10;
    return x;
}